--- a/src/main/resources/plugins.config
+++ b/src/main/resources/plugins.config
@@ -1,2 +1,2 @@
 # InvertImage plugin
-Plugins>Example, "Invert Image Lusine", org.example.ECMADMain
+Plugins>Deconvolution, "Deconvolution Test", org.example.ECMADMain
