--- a/src/main/resources/plugins.config
+++ b/src/main/resources/plugins.config
@@ -1,2 +1,2 @@
-# InvertImage plugin
-Plugins>Deconvolution, "Deconvolution Test 20 iter", org.example.ECMADMain
+# LMH Deconvolution plugin
+Plugins>Deconvolution, "LMH Deconvolution", org.lmh.deconvolution.DeconvolutionBlindPlugin
